# pygooglehelper

./: .aspell.en.pws  .mypy.ini  .spellcheck-words  .tools.versions  README.md  README.rst  pyproject.toml  requirements.thawed.txt  requirements.txt  rsconstruct.toml  setup.py
config/: project.py  python.py  version.py
doc/: TODO.txt
pygooglehelper/: __init__.py  auth.py  configs.py  register_hook.py  static.py  util.py
pymakehelper/: static.py
src/pygooglehelper/: auth.py  util.py
