[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygooglehelper"
version = "0.0.8"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "help you with the google API"
readme = "README.md"
license = "MIT"
keywords=[
    "api",
    "google",
    "python",
    "auth",
    "pagination",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "pytconf",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pygooglehelper"
"Bug Tracker" = "https://github.com/veltzer/pygooglehelper/issues"
"Documentation" = "https://veltzer.github.io/pygooglehelper"
"Download" = "https://pypi.org/project/pygooglehelper/"
"Repository" = "https://github.com/veltzer/pygooglehelper"


[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]
